--- a/src/index.css
+++ b/src/index.css
@@ -47,7 +47,7 @@
   --cream: 40 30% 97%;
 
   /* Typography */
-  --font-display: "Playfair Display", Georgia, serif;
+  --font-display: "Archivo Black", sans-serif;
   --font-body: "Inter", system-ui, sans-serif;
 
   /* Shadows */
